@@ -134,10 +134,17 @@ public class SummaryTablesCache
 	/**
 	 * @return
 	 */
-	public static boolean isEmpty()
+	public static boolean isEmpty(boolean menuOnly)
 	{
       synchronized(tables)
       {
+         if (menuOnly)
+         {
+            for(DciSummaryTableDescriptor d : tables.values())
+               if (!d.getMenuPath().isEmpty())
+                  return false;
+            return true;
+         }
          return tables.isEmpty();
       }
 	}
