@@ -10,7 +10,8 @@
 - Added option to set type of each varbind in nxsnmpset
 - Management console
 	- New editors for Agent Config Policy and Log Parser Policy. 
-- Fixed issues: #906, #1039, #1096, #1187, #1230, #1237, #1239
+	- DCI summary tables with empty menu path not shown in object context menu
+- Fixed issues: #906, #1039, #1096, #1187, #1191, #1230, #1237, #1239
 
 
 *
